# esphome

./: .clang-format  .clang-tidy  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yaml  .travis.yml  .yamllint  1  6chan_energy_meter.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  apply.patch  console-fan-autotune-test.yaml  docker-compose.yml  domtest.yaml  err.txt  esphome.json  freq.yml  notes.md  pan.yaml  platformio.ini  pylintrc  pyproject.toml  pytest.ini  repository.json  requirements.txt  requirements_dev.txt  requirements_optional.txt  (+9 more)
.devcontainer/: devcontainer.json  post-create
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  ci-reporter.yml  config.yml  dependabot.yml  issue-close-app.yml  lock.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new-integration.md
.github/workflows/: changed_components.yml  ci-api-proto.yml  ci-docker.yml  ci.yml  codeql-analysis.yml  codeql.yml  docker-lint-build.yml  lock.yml  main.yml  needs-docs.yml  pr-labels.yaml  pull.yaml  release-dev.yaml  release-dev.yml  release-version.yaml  release.yml  stale.yml  sync-device-classes.yml  update-version-workflow.yml  yaml-lint.yml
charts/esphome/: Chart.yaml  README.md  values.yaml
config2/: olimex-bluetooth-proxy-b5e714.yaml
configuration/: .gitignore
console-fan/: console-fan.yaml  workspace.code-workspace
docker/: Dockerfile  Dockerfile.aarch64  Dockerfile.amd64  Dockerfile.armhf  Dockerfile.builder  Dockerfile.dev  Dockerfile.hassio  Dockerfile.i386  Dockerfile.lint  Dockerfile.test  build.py  docker_entrypoint.sh  generate_tags.py  hassio-builder.sh  platformio-esp8266.ini  platformio.ini  platformio_install_deps.py  requirements_optional.txt
docker/hooks/: build  pre_build
esphome/: __main__.py  automation.py  boards.py  codegen.py  config.py  config_helpers.py  config_validation.py  const.py  const.py.bak  core.py  core_config.py  coroutine.py  cpp_generator.py  cpp_helpers.py  cpp_types.py  database.py  espota2.py  external_files.py  final_validate.py  ggr.py  git.py  helpers.py  idf_component.yml  jinja.py  jsonschema.py  legacy.py  loader.py  log.py  mqtt.py  pins.py  platformio_api.py  post_validate.py  py_compat.py  pyvenv.cfg  schema_extractors.py  storage_json.py  symlink_ops.py  test.yaml  types.py  use_ccache.py.script  (+9 more)
esphome/api/: api.proto  api_pb2.py  client.py
esphome/ble/: ble_interface.py
esphome/components/: __init__.py  ads1115.py  apds9960.py  api.py  custom_component.py  dallas.py  debug.py  deep_sleep.py  display.py  esp32_ble_beacon.py  esp32_ble_tracker.py  esp32_camera.py  esp32_touch.py  ethernet.py  font.py  globals.py  i2c.py  image.py  interval.py  logger.py  mcp23017.py  mpr121.py  mqtt.py  my9231.py  ota.py  pca9685.py  pcf8574.py  pn532.py  power_supply.py  pxmatrix_display.cpp  pxmatrix_display.h  rdm6300.py  remote_receiver.py  remote_transmitter.py  script.py  servo.py  sm16716.py  spi.py  status_led.py  substitutions.py  (+6 more)
esphome/core/: __init__.py  application.cpp  application.h  application_esp32.cpp  application_esp8266.cpp  audio.h  automation.cpp  automation.h  automation.tcc  base_automation.h  bytebuffer.cpp  bytebuffer.h  color.cpp  color.h  color_utils.h  component.cpp  component.h  component_iterator.cpp  component_iterator.h  config.py  controller.cpp  controller.h  datatypes.h  defines.h  (+41 more)
esphomeyaml/: Dockerfile  README.md  __main__.py  automation.py  config.json  config.py  config_validation.py  const.py  core.py  core_config.py  cpp_generator.py  cpp_helpers.py  cpp_types.py  espota.py  espota2.py  helpers.py  mqtt.py  pins.py  platformio_api.py  py_compat.py  storage_json.py  util.py  wizard.py  writer.py  yaml_util.py  zeroconf.py
esphomeyaml-beta/: config.json
esphomeyaml-edge/: Dockerfile  README.md  build.json  config.json
examples/: README.md  cabinet.yaml  dachboden.yaml  heatpump.yaml  kuche.yaml  lebensmittelkeller.yaml  livingroom.yaml  sonoff_4ch.yaml  sonoff_s20.yaml  terrasse.yaml
hooks/: build
my_configuration.yaml/: #power_monitor3.yaml#  power_monitor.yaml  power_monitor2.yaml  power_monitor2.yaml~  power_monitor3.yaml  power_monitor3.yaml~  test.yaml  testbed.yaml  testbed.yaml~
script/: .neopixelbus.patch  build_all_include.py  build_codeowners.py  build_compile_commands.py  build_jsonschema.py  build_language_schema.py  bump-docker-base-version.py  bump-version.py  ci-custom.py  ci-suggest-changes  clang-format  clang-format.py  clang-tidy  clang-tidy.py  component_test  devcontainer-post-create  extract_automations.py  fulltest  gen_requirements.py  helpers.py  lint-cpp  lint-python  list-components-changed.py  list-components.py  multi_upload.py  platformio_install_deps.py  pr-labels  quicklint  run-in-env.sh  schema.format.json  setub.bat  setup  setup.bat  sync-device_class.py  test  test_build_components  test_components  unit_test  unit_test_native
tests/: .gitignore  .max7219-2.yaml.swp  HVACTEST.yaml  HVACTEST2.yaml  JWC.yaml  README.md  TM1638TEST.yaml  build_components_base.esp32-ard.yaml  build_components_base.esp32-c3-ard.yaml  build_components_base.esp32-c3-idf.yaml  build_components_base.esp32-idf.yaml  build_components_base.esp32-s2-ard.yaml  build_components_base.esp32-s2-idf.yaml  build_components_base.esp32-s3-ard.yaml  build_components_base.esp32-s3-idf.yaml  build_components_base.esp8266.yaml  build_components_base.rp2040.yaml  custom.h  custom_test.yaml  dac7678.yaml  dolgozo.yaml  dummy_main.cpp  esp_now_device1.yaml  esp_now_device2.yaml  esp_now_device3.yaml  esp_now_device4.yaml  fantest.yaml  fantests.yaml  hdc1080.cpp  hosts  livingroom32.cpp  livingroom8266.cpp  max7219-2.yaml  max7219-3.yaml  max7219.yaml  max7219.yaml.save  merge_anchors.yaml  pylontest.yaml  test.txt  test1.1.yaml  (+35 more)
tests/gtest/: application_test.cpp  component_iterator_test.cpp  controller_test.cpp  meson.build
tests/gtest/mocks/: mock_custom_entiry.h  mock_sensor.h  mock_switch.h
(+8438 files in other folders)
