[metadata]
license      = MIT
license_file = LICENSE
platforms = any
description  = Make creating custom firmwares for ESP32/ESP8266 super easy.
long_description = file: README.md
keywords     = home, automation
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: C++
    Programming Language :: Python :: 3
    Topic :: Home Automation
Topic :: Home Automation

[flake8]
max-line-length = 120
exclude = api_pb2.py

[bdist_wheel]
universal = 1
