[metadata]
license      = MIT
license_file = LICENSE
platforms = any
description  = Make creating custom firmwares for ESP32/ESP8266 super easy.
long_description = file: README.md
keywords     = home, automation
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: C++
    Programming Language :: Python :: 3
    Topic :: Home Automation
Topic :: Home Automation

[flake8]
max-line-length = 120
exclude = api_pb2.py

[isort]
multi_line_output = 5
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = True
line_length = 100
indent = "    "
# by default isort don't check module indexes
not_skip = __init__.py
skip=api_pb2.py
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = esphome
forced_separate = tests
combine_as_imports = true
